--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -15,16 +15,13 @@
   color: white;
   position: relative;
 }
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
 .card-lawyer {
   position: absolute;
-  left: 300px;
-  bottom: 120px;
+  right: 100px;
+  top: 50px;
+  width: 40px;
 }
+
 
 .card-category {
   position: absolute;
